basic implementation of a simple game engine

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <script src="engine.js"></script>
   <script src="gameObject.js"></script>
+  <script src='collision.js'></script>
   <script src="newWorld.js"></script>
 </head>
 
