--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <canvas id="canvas" width="650" height="400" style="border:1px solid lightgrey;">
+  <canvas id="canvas" width="1000" height="500" style="border:1px solid lightgrey; width:100%;">
       Your browser does not support the HTML5 canvas tag.
   </canvas>
   <script>
