keyboard binding to movable object

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         <span class="mainTitleText">..=~*  M4CK3R3L  *~=..</span>
       </div>
 
-      <canvas id="canvas" width="1000" height="1000" style='z-index:0'> noCanvas! </canvas>
+      <div class="mainCanvas">
+        <canvas id="canvas" width="1000" height="500" style='z-index:0; width:100%'> noCanvas! </canvas>
+      </div>
+
 
       <div class="mainInfo">
         <p id="mainFPS">FPS: 0</p>
