--- a/index.html
+++ b/index.html
@@ -1,69 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable = no, minimal-ui">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta http-equiv='content-type' content='text/html; charset=utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable = no, minimal-ui'>
+  <meta name='apple-mobile-web-app-capable' content='yes'>
+  <meta name='mobile-web-app-capable' content='yes'>
+  <meta name='apple-mobile-web-app-status-bar-style' content='black'>
 
-  <!--link rel="apple-touch-icon" sizes="120x120" href="media/icon-iphone-retina.png"-->
+  <!--link rel='apple-touch-icon' sizes='120x120' href='media/icon-iphone-retina.png'-->
 
-  <link rel="stylesheet" type="text/css" href="css/style.css" media="screen"/>
-  <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen"/>
+  <link rel='stylesheet' type='text/css' href='css/style.css' media='screen'/>
+  <link rel='stylesheet' type='text/css' href='css/layout.css' media='screen'/>
 
-  <meta name="description" content="mackerel game">
-  <meta name="author" content="PietOnHub">
+  <meta name='description' content='mackerel game'>
+  <meta name='author' content='PietOnHub'>
 
   <title> Mackerel </title>
 
-  <script src="js/globals.js"></script>
-  <script src="js/engine.js"></script>
-  <script src="js/gameObject.js"></script>
-  <script src="js/boat.js"></script>
+  <script src='js/globals.js'></script>
+  <script src='js/engine.js'></script>
+  <script src='js/gameObject.js'></script>
+  <script src='js/boat.js'></script>
   <script src='js/collision.js'></script>
-  <script src="js/newWorld.js"></script>
-  <script src="js/controls.js"></script>
+  <script src='js/newWorld.js'></script>
+  <script src='js/controls.js'></script>
 
 </head>
 
-<body scroll="no" style="overflow: hidden">
+<body scroll='no' style='overflow: hidden'>
 
-  <div class="mainWrapper">
+<div class='viewWrapper'>
+  <div class='viewGame'>
 
-    <div class="mainScreen">
+    <div class='viewHeader'>
+      <span class='mainTitleText'>..=~*  M4CK3R3L  *~=..</span>
+    </div>
 
-      <div class="mainTitle">
-        <span class="mainTitleText">..=~*  M4CK3R3L  *~=..</span>
+    <div class='viewContent'>
+
+      <div class='viewContentLeft'>
+        <div class='viewContentLeftCanvas'>
+            <canvas id='canvas' width='800' height='800' style='z-index:0; width:100%'> noCanvas! </canvas>
+        </div>
       </div>
 
-      <div class="mainCanvas">
-        <canvas id="canvas" width="1000" height="500" style='z-index:0; width:100%'> noCanvas! </canvas>
-      </div>
-
-
-      <div class="mainInfo">
-        <p id="mainFPS">FPS: 0</p>
-        <p id="mainTimer">TIME: 0</p>
-        <p id="mainObjCount">OBJ#: 0</p>
-      </div>
-
-      <div class="mackerelOS">
-        <span> mackerelOS 0.2.0 </span>
-      </div>
-
-      <div class="mainEcholot">
+      <div class='viewContentRight'>
+        <div class='viewContentRightEcholot'>
+          <span> Echolot </span>
+        </div>
+        <div class='viewContentRightButtons'>
+          <span> Buttons </span>
+        </div>
       </div>
 
     </div>
 
+    <div class='viewFooter'>
+      <span> MackerelOS 0.2.0 </span>
+    </div>
 
   </div>
+</div>
+
+<div class='viewContentLeftInfo'>
+  <p id='mainFPS'>FPS: 0</p>
+  <p id='mainTimer'>TIME: 0</p>
+  <p id='mainObjCount'>OBJ#: 0</p>
+</div>
 
   <script>
 
-    "use strict";
+    'use strict';
     window.onload = init();
 
   </script>
