--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
   <script src='js/objects/boat.js'></script>
   <script src='js/collision/collision.js'></script>
   <script src='js/world/newWorld.js'></script>
-
-
+  <script src='js/tools/_tools.js'></script>
+  <script src='js/tools/clearCanvas.js'></script>
   <script src='js/tools/windowResize.js'></script>
+  <script src='js/tools/drawInfo.js'></script>
 
 </head>
 
