--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
   <script src='js/game.js'></script>
   <script src='js/engine/gameLoop.js'></script>
   <script src='js/controls/controls.js'></script>
-  <script src='js/objects/gameObject.js'></script>
-  <script src='js/objects/boat.js'></script>
+  <script src='js/gameObject/_gameObject.js'></script>
+  <script src='js/gameObject/boat.js'></script>
+  <script src='js/gameObject/circle.js'></script>
   <script src='js/collision/collision.js'></script>
   <script src='js/world/newWorld.js'></script>
   <script src='js/tools/_tools.js'></script>
+  <script src='js/tools/unit.js'></script>
   <script src='js/tools/clearCanvas.js'></script>
   <script src='js/tools/windowResize.js'></script>
   <script src='js/tools/drawInfo.js'></script>
@@ -38,6 +40,13 @@
   <span class='viewInfoItem' id='mainFPS'>FPS: 0</span>
   <span class='viewInfoItem' id='mainTimer'>TIME: 0</span>
   <span class='viewInfoItem' id='mainObjCount'>OBJ#: 0</span>
+  <span class='viewInfoItem' id='boatThrottle'>Throttle: 0</span>
+  <span class='viewInfoItem' id='boatFW'>FW: 0</span>
+  <span class='viewInfoItem' id='boatFTh'>FTh: 0</span>
+  <span class='viewInfoItem' id='boatA'>a_res: 0</span>
+  <span class='viewInfoItem' id='boatSTW'>STW: 0</span>
+  <span class='viewInfoItem' id='boatRudder'>Rudder: 0</span>
+  <span class='viewInfoItem' id='boatOrientation'>Orientation: 0</span>
 </div>
 
 <div id= 'wrapper' class='viewWrapper'>
